--- a/style.css
+++ b/style.css
@@ -29,4 +29,12 @@
 	margin:0 10px; 
 }
 
+.wpapl-people-detail-tag {
+	font-weight: bold;
+}
+
+.wpapl-people-individual-tag {
+	font-weight: bold;	
+}
+
 	
